<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robo Arena</string>
    <string name="title_activity_match_history">Match History</string>
    <string name="title_activity_match_details">Match Details</string>
    <string name="title_activity_settings">SettingsActivity</string>
    
    <!-- Firebase URLS -->
    <string name="roboarena_firebase_url">https://robo-arena.firebaseIO.com</string>
    <string name="roboarena_firebase_games">https://robo-arena.firebaseIO.com/games</string>
    
    <!-- Firebase Strings -->
    <string name="fb_game_info">info</string>
    <string name="fb_game_player_creator">player_creator</string>
    <string name="fb_game_player_joiner">player_joiner</string>
    
    <string name="fb_game_info_active">active</string>
    <string name="fb_game_info_game_running">game_running</string>
    <string name="fb_game_info_password">password</string>
    <string name="fb_game_info_allow_spectators">allow_spectators</string>
    <string name="fb_game_info_date">date</string>
    
    <string name="fb_game_player_name">name</string>
    <string name="fb_game_player_health">health</string>
    <string name="fb_game_player_is_connected">is_connected</string>
    <string name="fb_game_player_is_ready">is_ready</string>
    <string name="fb_game_player_left_actions_allowed">left_actions_allowed</string>
    <string name="fb_game_player_right_actions_allowed">right_actions_allowed</string>
    
    <string name="fb_game_player_block">block</string>
    <string name="fb_game_player_blocking">blocking</string>
    <string name="fb_game_player_left_jab">left_jab</string>
    <string name="fb_game_player_left_hook">left_hook</string>
    <string name="fb_game_player_left_uppercut">left_uppercut</string>
    <string name="fb_game_player_right_jab">right_jab</string>
    <string name="fb_game_player_right_hook">right_hook</string>
    <string name="fb_game_player_right_uppercut">right_uppercut</string>
    
    <!-- Errors -->
    <string name="error_game_name_empty">Enter a game name</string>
    <string name="error_game_name_exists">Game name is taken, choose another!</string>
    <string name="error_game_password_no_match">Password incorrect!</string>
    <string name="error_game_does_not_exist">Game doesn\'t exists, try again</string>
    
    <!-- Main Menu Buttons -->
    <string name="spectate">Spectate</string>
    <string name="match_history">Match History</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="player_vs_ai">Player vs AI</string>
    <string name="player_vs_player">Player vs Player</string>

    <!-- Titles -->
    <string name="match_history_title">Match History</string>
    <string name="main_menu_title">Robo Arena</string>
    <string name="settings_title">Settings</string>
    <string name="match_details_title">Match Details</string>
    
    <!-- Computer difficulty -->
    <string name="computer_difficulty_title">Vs. Computer</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="box">Box!</string>

    <!-- Arenas -->
    <string name="arena_title">Player 1 Vs. Opponent</string>
    <string name="spectator_arena_title">Player 1 Vs. Player 2</string>
    <string name="arena_pvp_vs_title">%1$s vs %2$s</string>
    <string name="arena_pvai_vs_title">%1$s vs Computer</string>
    <string name="max_health">100</string>
    
    <!-- Locker room -->
    <string name="locker_room">Locker Room</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="spec1">Spectator 1</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="ready">Ready</string>

    <!-- Locate matches -->
    <string name="vs_player">Vs. Player</string>
    <string name="room_name">Room Name</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="allow_spectators">Allow Spectators?</string>
    
    <!-- Settings -->
    <string name="settings_glove_color">Glove Color</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_music">Music</string>
    <string name="settings_username">Username</string>
    <string name="settings_username_hint">Username</string>
    <string name="settings_save">Save</string>

    <!-- Stats -->
    <string name="attempted_hits">Attempted Hits</string>
    <string name="successful_hits">Successful Hits</string>
    <string name="blocked_hits">Blocked Hits</string>
    <string name="blocks">Blocks</string>
    
    <!-- Action names -->
    <string name="left_jab">Left Jab</string>
    <string name="left_hook">Left Hook</string>
    <string name="left_uppercut">Left Uppercut</string>
    
    <string name="right_jab">Right Jab</string>
    <string name="right_hook">Right Hook</string>
    <string name="right_uppercut">Right Uppercut</string>
    
    <string name="block">Block</string>
    
    <!-- Misc -->
    <string name="win">You WIN against</string>
    <string name="lose">You LOSE against</string>
    <string name="default_username">My Name</string>
    <string name="default_opponent_name">Default Opponent Name</string>
    <string name="ai_opponent_name">Super Robot Boxer Lord</string>
    <string name="default_date">8/20/1991</string>
    <string name="table_row">Table Row</string>
    <string name="done">Done</string>
    <string name="default_score">0</string>
    <string name="spectator_not_implemented">Sorry, this feature isn\'t implemented here!</string>
    
    <!-- Preferences -->
    <string name="preference_file_key">edu.rosehulman.petitjam_coblebj.PREF_KEY</string>
    <string name="prefs_key_username">PREFS_KEY_USERNAME</string>
    
    <string name="clock_start">60</string>

</resources>
