<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainMenuActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/main_menu_title"
        android:textSize="@dimen/title_text_size" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <Button
            android:id="@+id/spectate_button"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/spectate"
            android:textSize="@dimen/main_menu_button_text_size" />

        <Button
            android:id="@+id/match_history_button"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/match_history"
            android:textSize="@dimen/main_menu_button_text_size" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/main_menu_button_text_size" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="@dimen/main_menu_button_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/player_vs_player_button"
        android:layout_width="@dimen/main_menu_button_width"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/title"
        android:text="@string/player_vs_player" />

    <Button
        android:id="@+id/player_vs_ai_button"
        android:layout_width="@dimen/main_menu_button_width"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/title"
        android:text="@string/player_vs_ai" />

</RelativeLayout>