<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/match_details_title"
        android:textSize="@dimen/title_text_size" />

    <TableLayout
        android:id="@+id/match_stats_table_layout"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TableRow
            android:id="@+id/attempted_hits_line"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/attempted_hits"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/attempted_hits" />

            <TextView
                android:id="@+id/attempted_hits_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/default_score" />
        </TableRow>

        <TableRow
            android:id="@+id/successful_hits_line"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/successful_hits"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/successful_hits" />

            <TextView
                android:id="@+id/successful_hits_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/default_score" />
        </TableRow>

        <TableRow
            android:id="@+id/blocked_hits_line"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/blocked_hits"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/blocked_hits" />

            <TextView
                android:id="@+id/blocked_hits_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/default_score" />
        </TableRow>
        
		<TableRow
            android:id="@+id/blocks_line"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/blocks"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/blocks" />

            <TextView
                android:id="@+id/blocks_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/default_score" />
        </TableRow>
        
        <!-- TODO: More stat rows here.  Add a scroll view around the table layout if we have enough stats -->
        
    </TableLayout>

    <TextView
        android:id="@+id/opponent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="18dp"
        android:layout_centerHorizontal="true"
        android:text="@string/default_opponent_name" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="18dp"
        android:layout_alignRight="@+id/match_stats_table_layout"
        android:text="@string/default_date" />

    <TextView
        android:id="@+id/outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="18dp"
        android:layout_alignLeft="@+id/match_stats_table_layout"
        android:text="@string/win" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/done" />

</RelativeLayout>