<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:textSize="25sp"
        android:layout_weight="1" />
    
    <TextView
        android:id="@+id/opponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_opponent_name"
        android:textSize="25sp"
        android:layout_weight="1" />
    
    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        android:textSize="25sp"
        android:layout_weight="1" />

</LinearLayout>
