<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LockerRoomActivity" >

    <TextView
        android:id="@+id/locker_room_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/locker_room"
        android:textSize="@dimen/title_text_size" />

    <Button
        android:id="@+id/ready_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/ready" />

    <CheckBox
        android:id="@+id/player_one_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/locker_room_title"
        android:layout_below="@+id/locker_room_title"
        android:layout_marginTop="25dp"
        android:text="@string/player1" />
    
    <CheckBox
        android:id="@+id/player_two_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/player_one_check_box"
        android:layout_below="@+id/player_one_check_box"
        android:layout_marginTop="26dp"
        android:text="@string/player2" />

    <TextView
        android:id="@+id/player_one_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/player_one_check_box"
        android:layout_alignBottom="@+id/player_one_check_box"
        android:layout_alignRight="@+id/locker_room_title"
        android:text="@string/not_connected" />

    <TextView
        android:id="@+id/player_two_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/player_two_check_box"
        android:layout_alignBottom="@+id/player_two_check_box"
        android:layout_alignRight="@+id/locker_room_title"
        android:text="@string/not_connected" />


</RelativeLayout>