<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ComputerDifficultyActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/computer_difficulty_title"
        android:textSize="@dimen/title_text_size" />

    <Button
        android:id="@+id/start_box_button"
        android:layout_width="@dimen/main_menu_button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:text="@string/box"
        android:textSize="@dimen/main_menu_button_text_size" />

    <SeekBar
        android:id="@+id/difficulty_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:layout_marginTop="56dp" 
        android:max="2"/>
    
    <TextView
        android:id="@+id/medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/difficulty_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/medium" />

    <TextView
        android:id="@+id/easy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/medium_text"
        android:layout_alignBottom="@+id/medium_text"
        android:layout_alignLeft="@+id/difficulty_bar"
        android:text="@string/easy" />

    <TextView
        android:id="@+id/hard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/medium_text"
        android:layout_alignBottom="@+id/medium_text"
        android:layout_alignRight="@+id/difficulty_bar"
        android:text="@string/hard" />

</RelativeLayout>