<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/settings_title"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/glove_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="@dimen/settings_text_marginTop"
        android:text="@string/settings_glove_color" />

    <Spinner
        android:id="@+id/glove_color_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/settings_input_marginTop" />

    <TextView
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/glove_color"
        android:layout_below="@+id/glove_color"
        android:layout_marginTop="@dimen/settings_text_marginTop"
        android:text="@string/settings_sound" />

    <SeekBar
        android:id="@+id/sound_seekbar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/glove_color_spinner"
        android:layout_marginTop="@dimen/settings_input_marginTop" />

    <TextView
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/glove_color"
        android:layout_below="@+id/sound"
        android:layout_marginTop="@dimen/settings_text_marginTop"
        android:text="@string/settings_music" />

    <SeekBar
        android:id="@+id/music_seekbar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sound_seekbar"
        android:layout_marginTop="@dimen/settings_input_marginTop" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/glove_color"
        android:layout_below="@+id/music"
        android:layout_marginTop="@dimen/settings_text_marginTop"
        android:text="@string/settings_username" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/music_seekbar"
        android:layout_marginTop="@dimen/settings_input_marginTop"
        android:hint="@string/settings_username_hint" >
    </EditText>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_save" />
    </LinearLayout>

</RelativeLayout>